new changes to home

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/blp-footer.png">
     <title>Charitio - Multipurpose Charity Nonprofit HTML5 Template</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
@@ -38,7 +38,7 @@
                     <div class="loader-line-mask">
                         <div class="loader-line"></div>
                     </div>
-                    <img src="assets/images/preloader.png" alt="">
+                    <!-- <img src="assets/images/preloader.png" alt=""> -->
                 </div>
             </div>
         </div>
@@ -68,12 +68,12 @@
                                 <button class="menu-close"><i class="ti-close"></i></button>
                                 <ul class="nav navbar-nav mb-2 mb-lg-0">
                                     <li class="menu-item-has-children">
-                                        <a class="active" href="
+                                        <a  href="
                                         index.html">Home</a>
                                     
                                     </li>
                                     <li class="menu-item-has-children">
-                                        <a  href="about.html">About</a>
+                                        <a class="active" href="about.html">About</a>
                                   
                                     </li>
                                     <li class="menu-item-has-children">
