--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="wpo-about-wrap">
                             <div class="wpo-about-img">
-                                <img src="assets/images/about.png" alt="">                              
+                                <img src="assets/images/index/about.png" alt="">                              
                                 <div class="round-ball-1"></div>
                                 <div class="round-ball-2"></div>
                                 <div class="round-ball-3"></div>
