Favicon and Title
Favicon and Title

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
         <!-- end preloader -->
 		
-      <!-- Start header -->          
-      <header id="header" class="wpo-site-header">
+		<!-- Start header -->          
+		<header id="header" class="wpo-site-header">
         <nav class="navigation navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <div class="row align-items-center">
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-6">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="index.html"><img src="assets/images/blp logo.png" alt=""></a>
+                            <a class="navbar-brand" href="index.html"><img src="assets/images/blp-logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-1 col-1">
@@ -97,8 +97,7 @@
                                 </li>
                             </ul>
                         </div><!-- end of nav-collapse -->
-                    </div>
-                 
+                    </div>                 
                 </div>
             </div><!-- end of container -->
         </nav>
