changes to home page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
                         <div class="wpo-about-text">
                             <span>About Us</span>
                             <h2>Better Life Program for the African Rural Woman</h2>
-                            Founded in 1987 to bring about an emergence of economically empowered African women living better and participating effectively in the process of national development. To achieve this, we run different programs and initiatives with our members as well as local and international partners.</p>                            
+                            Founded in 1987 to bring about an emergence of economically empowered African women living better and participating effectively in the process of national development. To achieve this, we run different programs and initiatives with our members as well as local and international partners.</p>   
+                            <div class="about-highlight">
+                             <p>Helped Fund <span class="project">2537</span> projects in <span class="country">7 Countries</span></p>
+                             <p>Benefiting over <span class="people">2.4 Million</span> people</p>
+                            </div>                         
                             <a class="theme-btn-s2" href="about.html">Learn More</a>
                         </div>
                     </div>
