changes to about page the initial version

--- a/index-7.html
+++ b/index-7.html
@@ -415,7 +415,7 @@
         </section>
         <!-- end wpo-project-section -->
         <!-- wpo-testimonial-area start -->
-        <div class="wpo-testimonial-area-s3 section-padding pt-0">
+        <section class="wpo-testimonial-area-s3 section-padding pt-0">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
@@ -462,7 +462,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- wpo-testimonial-area end -->
         <!-- wpo-event-area start -->
         <div class="wpo-event-area-s2 section-padding bg-green">
