--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- start page-wrapper -->
-    <div class="page-wrapper">
+    <div class="page-wrapper index-page">
         <!-- start preloader -->
         <div class="preloader">
             <div class="vertical-centered-box">
