--- a/about.html
+++ b/about.html
@@ -35,7 +35,6 @@
                     <div class="loader-line-mask">
                         <div class="loader-line"></div>
                     </div>
-                    <!-- <img src="assets/images/preloader.png" alt=""> -->
                 </div>
             </div>
         </div>
@@ -74,7 +73,7 @@
                                 <li class="menu-item-has-children">
                                     <a href="#">Programs</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">Cottage Industry</a></li>
+                                        <li><a href="cottage-industry.html">Cottage Industry</a></li>
                                         <li><a href="#">Impact 500</a></li>
                                         <li><a href="#">Advocacy</a></li>
                                     </ul>
