--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                                     <a href="#">Programs</a>
                                     <ul class="sub-menu">
                                         <li><a href="cottage-industry.html">Cottage Industry</a></li>
-                                        <li><a href="#">Impact 500</a></li>
-                                        <li><a href="#">Advocacy</a></li>
+                                        <li><a href="impact500.html">Impact 500</a></li>
+                                        <li><a href="advocacy.html">Advocacy</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
