Changes as earlier discussed

--- a/advocacy.html
+++ b/advocacy.html
@@ -221,6 +221,26 @@
             </div>
         </section>
         <!--end of advocacy service-->
+        <!--become a partner-->
+        <div class="wpo-cta-area-s2">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="wpo-cta-section">
+                            <div class="wpo-cta-content">
+                                <h2> Become a Partnet and Save Lifes</h2>
+                                <a href="volunteer.html">Join With Us</a>
+                            </div>
+                            <div class="volunteer-img">
+                                <img src="assets/images/bird.png" alt="">
+                            </div>
+                            <div class="shape"><img src="assets/images/cta-shape.png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--end of become a partner-->
         <!-- start of wpo-site-footer-section -->
         <footer class="wpo-site-footer">
             <div class="wpo-upper-footer">
