--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <link href="assets/css/jquery.fancybox.css" rel="stylesheet">
     <link href="assets/css/odometer-theme-default.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,147 +42,66 @@
         </div>
         <!-- end preloader -->
         <!-- Start header -->
-        <header id="header">
-            <div class="topbar">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col col-md-7 col-sm-12 col-12">
-                            <div class="contact-intro">
-                                <ul>
-                                    <li><i class="fi ti-location-pin"></i>7 Green Lake Street Crawfordsville</li>
-                                    <li><i class="fi flaticon-email"></i> charito@gmail.com</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-md-5 col-sm-12 col-12">
-                            <div class="contact-info">
-                                <ul>
-                                    <li>Visit our social pages</li>
-                                    <li><a href="#"><i class="ti-facebook"></i></a></li>
-                                    <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                                    <li><a href="#"><i class="ti-instagram"></i></a></li>
-                                    <li><a href="#"><i class="ti-google"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- end topbar -->
-            <div class="wpo-site-header">
-                <nav class="navigation navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                        <div class="row align-items-center">
-                            <div class="col-lg-3 col-md-3 col-3 d-lg-none dl-block">
-                                <div class="mobail-menu">
-                                    <button type="button" class="navbar-toggler open-btn">
-                                        <span class="sr-only">Toggle navigation</span>
-                                        <span class="icon-bar first-angle"></span>
-                                        <span class="icon-bar middle-angle"></span>
-                                        <span class="icon-bar last-angle"></span>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6 col-6">
-                                <div class="navbar-header">
-                                    <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt=""></a>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-1 col-1">
-                                <div id="navbar" class="collapse navbar-collapse navigation-holder">
-                                    <button class="menu-close"><i class="ti-close"></i></button>
-                                    <ul class="nav navbar-nav mb-2 mb-lg-0">
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Home</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="index.html">Home Charity</a></li>
-                                                <li><a href="index-2.html">Home Education</a></li>
-                                                <li><a href="index-3.html">Home Wildlife</a></li>
-                                                <li><a href="index-4.html">Home Ocean Polution</a></li>
-                                                <li><a href="index-5.html">Home World Pandemic</a></li>
-                                                <li><a href="index-6.html">Home Nature</a></li>
-                                                <li><a href="index-7.html">Home Nature S2</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a  href="#">Causes</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="cause.html">Causes</a></li>
-                                                <li><a href="cause-single.html">Causes Single</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Events</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="event.html">Events</a></li>
-                                                <li><a href="event-s2.html">Events S2</a></li>
-                                                <li><a href="event-single.html">Events Single</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Pages</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="service.html">Service</a></li>
-                                                <li><a href="service-single.html">Service Single</a></li>
-                                                <li><a href="project.html">Project</a></li>
-                                                <li><a href="project-single.html">Project Single</a></li>
-                                                <li><a href="donate.html">Donate</a></li>
-                                                <li><a href="team-single.html">Volunteer</a></li>
-                                                <li><a href="testimonial.html">Testimonial</a></li>
-                                                <li><a href="404.html">Error 404</a></li>
-                                                <li><a href="login.html">Login</a></li>
-                                                <li><a href="register.html">Sign Up</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="menu-item-has-children">
-                                            <a href="blog.html">Blog</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog right sidebar</a></li>
-                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                                                <li class="menu-item-has-children">
-                                                    <a href="#">Blog details</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="blog-single.html">Blog details right sidebar</a>
-                                                        </li>
-                                                        <li><a href="blog-single-left-sidebar.html">Blog details left
-                                                                sidebar</a></li>
-                                                        <li><a href="blog-single-fullwidth.html">Blog details
-                                                                fullwidth</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li><a class="active" href="contact.html">Contact</a></li>
+        <header id="header" class="wpo-site-header">
+            <nav class="navigation navbar navbar-expand-lg navbar-light">
+			<div class="container-fluid">
+				<div class="row align-items-center">
+					<div class="col-lg-3 col-md-3 col-3 d-lg-none dl-block">
+						<div class="mobail-menu">
+							<button type="button" class="navbar-toggler open-btn">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar first-angle"></span>
+								<span class="icon-bar middle-angle"></span>
+								<span class="icon-bar last-angle"></span>
+							</button>
+						</div>
+					</div>
+                    <div class="col-lg-3 col-md-6 col-6">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="index.html"><img src="assets/images/blp-logo.png" alt=""></a>
+						</div>
+					</div>
+					<div class="col-lg-9 col-md-1 col-1">
+                        <div id="navbar" class="collapse navbar-collapse navigation-holder">
+                            <button class="menu-close"><i class="ti-close"></i></button>
+                            <ul class="nav navbar-nav mb-2 mb-lg-0">
+                                <li class="menu-item-has-children">
+                                    <a href="index.html">Home</a>                                
+                                </li>
+                                <li class="menu-item-has-children">
+									<a class="" href="about.html">About</a>                              
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Programs</a>
+                                    <ul class="sub-menu">
+                                        <li><a href="cottage-industry.html">Cottage Industry</a></li>
+                                        <li><a href="impact500.html">Impact 500</a></li>
+                                        <li><a href="advocacy.html">Advocacy</a></li>
                                     </ul>
-    
-                                </div><!-- end of nav-collapse -->
-                            </div>
-                            <div class="col-lg-3 col-md-2 col-2">
-                                <div class="header-right">
-                                    <div class="close-form">
-                                        <a class="theme-btn-s2" href="donate.html">Donate Now</a>
-                                    </div>
-                                    <div class="header-search-form-wrapper">
-                                        <div class="cart-search-contact">
-                                            <button class="search-toggle-btn"><i class="fi flaticon-search"></i></button>
-                                            <div class="header-search-form">
-                                                <form>
-                                                    <div>
-                                                        <input type="text" class="form-control"
-                                                            placeholder="Search here...">
-                                                        <button type="submit"><i class="fi flaticon-search"></i></button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- end of container -->
-                </nav>
-            </div>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Initiative</a>
+                                    <ul class="sub-menu">
+                                        <li><a href="bgirl.html">B-Girl</a></li>
+                                        <li><a href="sauki.html">Sauki Health</a></li>
+                                        <li><a href="northeast.html">North East</a></li>                                       
+                                    </ul>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#" class="active">Get Involved</a>
+                                    <ul class="sub-menu">
+                                        <li><a href="sponsor.html">Sponsor a Child</a></li>
+                                        <li><a href="volunteer.html">Volunteer</a></li>
+                                        <li><a href="partner.html">Partner with Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div><!-- end of nav-collapse -->
+                    </div>                   
+                </div>
+			</div><!-- end of container -->
+            </nav>
         </header>
         <!-- end of header -->
         <!-- start of breadcumb-section -->
@@ -315,9 +235,9 @@
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget about-widget">
                                 <div class="logo widget-title">
-                                    <img src="assets/images/logo2.png" alt="blog">
+                                    <img src="assets/images/blp-footer.png" alt="blog">
                                 </div>
-                                <p>Welcome and open yourself to your truest love this year with us! With the Release Process</p>
+                                <p>Empoweering African Women</p>
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -348,11 +268,11 @@
                                     <h3>Services </h3>
                                 </div>
                                 <ul>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="cause.html">Causes</a></li>
-                                    <li><a href="blog.html">Latest News</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
-                                    <li><a href="event.html">Events</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Sponsor a Child</a></li>
+                                    <li><a href="#">Volunteer</a></li>
+									<li><a href="#">Partner With Us</a></li>
+                                    <li><a href="#">Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -362,29 +282,31 @@
                                     <h3>Contact </h3>
                                 </div>
                                 <div class="contact-ft">
-                                    <p>Would you have any enquiries.Please feel free to contuct us</p>
+                                    <p>Should you have any enquiries, please feel free to contact us</p>
                                     <ul>
-                                        <li><i class="fi flaticon-mail"></i>charito@gmail.com</li>
-                                        <li><i class="fi flaticon-phone-call"></i>+888 (123) 869523</li>
-                                        <li><i class="fi flaticon-location"></i>New York – 1075 Firs Avenue</li>
+                                        <li><i class="fi flaticon-mail"></i>info@betterlife-africa.org</li>
+                                        <li><i class="fi flaticon-phone-call"></i>(+234) 906 960 8053</li>
+                                        <li><i class="fi flaticon-location"></i>90 Aminu Kano Crescent, Wuse 2, Abuja, Nigeria</li>
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        
+                        </div>                        
                         <div class="col col-lg-3 col-md-6 col-sm-12 col-12">
                             <div class="widget instagram">
                                 <div class="widget-title">
-                                    <h3>Projects</h3>
+                                    <h3>Newsletter</h3>
                                 </div>
-                                <ul class="d-flex">
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/1.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/2.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/3.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/4.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/5.jpg" alt=""></a></li>
-                                    <li><a href="project-single.html"><img src="assets/images/instragram/6.jpg" alt=""></a></li>
-                                </ul>
+								<form>
+									<div class="form-group">
+										<label for="">Full Name</label>
+										<input type="text" class="form-control"  placeholder="Enter your full name">
+									</div>   
+									<div class="form-group">
+										<label for="">Email Address</label>
+										<input type="email" class="form-control"  placeholder="Enter your email address">
+									</div> 
+									<button type="submit" class="wpo-accountBtn">Subscribe</button> 
+								</form>
                             </div>
                         </div>
                     </div>
@@ -394,7 +316,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-xs-12">
-                            <p class="copyright"> &copy; 2021 Charito Theme. Design By <a href="index.html">wpOcean</a>. All Rights Reserved.</p>
+                            <p class="copyright"> &copy; 2022 Better Life Program for the African Rural Woman. All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
