--- a/cottage-industry.html
+++ b/cottage-industry.html
@@ -82,18 +82,18 @@
                                 <li class="menu-item-has-children">
                                     <a href="#">Initiative</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">B-Girl</a></li>
-                                        <li><a href="#">Sauki Health</a></li>
-                                        <li><a href="#">North East</a></li>                                       
+                                        <li><a href="bgirl.html">B-Girl</a></li>
+                                        <li><a href="sauki.html">Sauki Health</a></li>
+                                        <li><a href="northeast.html">North East</a></li>                                       
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="#">Get Involved</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">Sponsor a Child</a></li>
-                                        <li><a href="#">Volunteer</a></li>
-                                        <li><a href="#">Partner with Us</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="sponsor.html">Sponsor a Child</a></li>
+                                        <li><a href="volunteer.html">Volunteer</a></li>
+                                        <li><a href="partner.html">Partner with Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </li>
                             </ul>
