--- a/advocacy.html
+++ b/advocacy.html
@@ -82,18 +82,18 @@
                                 <li class="menu-item-has-children">
                                     <a href="#">Initiative</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">B-Girl</a></li>
-                                        <li><a href="#">Sauki Health</a></li>
-                                        <li><a href="#">North East</a></li>                                       
+                                        <li><a href="bgirl.html">B-Girl</a></li>
+                                        <li><a href="sauki.html">Sauki Health</a></li>
+                                        <li><a href="northeast.html">North East</a></li>                                       
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="#">Get Involved</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">Sponsor a Child</a></li>
-                                        <li><a href="#">Volunteer</a></li>
-                                        <li><a href="#">Partner with Us</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="sponsor.html">Sponsor a Child</a></li>
+                                        <li><a href="volunteer.html">Volunteer</a></li>
+                                        <li><a href="partner.html">Partner with Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -131,10 +131,11 @@
                         <div class="wpo-section-title">
                             <span>Programs</span>
                             <h2>Our Featured Programs</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit, ratione assumenda ab, quasi numquam repellendus </p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row pt-4">
                     <div class="col col-xl-4 col-lg-6 col-sm-6 col-12">
                         <div class="wpo-features-item">
                             <div class="wpo-features-icon">
@@ -176,7 +177,7 @@
                     </div>
                 
                 </div>
-                <div class="row advocacy-row">
+                <div class="row advocacy-row pt-5">
                
                     <div class="col col-xl-4 col-lg-6 col-sm-6 col-12">
                         <div class="wpo-features-item">
