--- a/index.html
+++ b/index.html
@@ -42,33 +42,34 @@
         <!-- end preloader -->
 		
 		<!-- Start header -->          
-		<header id="header" class="wpo-site-header">
-        <nav class="navigation navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-lg-3 col-md-3 col-3 d-lg-none dl-block">
-                        <div class="mobail-menu">
-                            <button type="button" class="navbar-toggler open-btn">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar first-angle"></span>
-                                <span class="icon-bar middle-angle"></span>
-                                <span class="icon-bar last-angle"></span>
-                            </button>
-                        </div>
-                    </div>
+        <header id="header" class="wpo-site-header">
+            <nav class="navigation navbar navbar-expand-lg navbar-light">
+			<div class="container-fluid">
+				<div class="row align-items-center">
+					<div class="col-lg-3 col-md-3 col-3 d-lg-none dl-block">
+						<div class="mobail-menu">
+							<button type="button" class="navbar-toggler open-btn">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar first-angle"></span>
+								<span class="icon-bar middle-angle"></span>
+								<span class="icon-bar last-angle"></span>
+							</button>
+						</div>
+					</div>
                     <div class="col-lg-3 col-md-6 col-6">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="index.html"><img src="assets/images/blp-logo.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-9 col-md-1 col-1">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="index.html"><img src="assets/images/blp-logo.png" alt=""></a>
+						</div>
+					</div>
+					<div class="col-lg-9 col-md-1 col-1">
                         <div id="navbar" class="collapse navbar-collapse navigation-holder">
                             <button class="menu-close"><i class="ti-close"></i></button>
                             <ul class="nav navbar-nav mb-2 mb-lg-0">
                                 <li class="menu-item-has-children">
-                                    <a class="active" href="index.html">Home</a>                                
+                                    <a href="index.html" class="active">Home</a>                                
                                 </li>
-                                <li class="menu-item-has-children"><a  href="about.html">About</a>                              
+                                <li class="menu-item-has-children">
+									<a class="" href="about.html">About</a>                              
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="#">Programs</a>
@@ -81,27 +82,27 @@
                                 <li class="menu-item-has-children">
                                     <a href="#">Initiative</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">B-Girl</a></li>
-                                        <li><a href="#">Sauki Health</a></li>
-                                        <li><a href="#">North East</a></li>                                       
+                                        <li><a href="bgirl.html">B-Girl</a></li>
+                                        <li><a href="sauki.html">Sauki Health</a></li>
+                                        <li><a href="northeast.html">North East</a></li>                                       
                                     </ul>
                                 </li>
                                 <li class="menu-item-has-children">
                                     <a href="#">Get Involved</a>
                                     <ul class="sub-menu">
-                                        <li><a href="#">Sponsor a Child</a></li>
-                                        <li><a href="#">Volunteer</a></li>
-                                        <li><a href="#">Partner with Us</a></li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="sponsor.html">Sponsor a Child</a></li>
+                                        <li><a href="volunteer.html">Volunteer</a></li>
+                                        <li><a href="partner.html">Partner with Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </div><!-- end of nav-collapse -->
-                    </div>                 
+                    </div>                   
                 </div>
-            </div><!-- end of container -->
-        </nav>
-    </header>
+			</div><!-- end of container -->
+            </nav>
+        </header>
     <!-- end of header -->
 
     <!-- start of wpo-hero-section-1 -->
